[gd_scene load_steps=8 format=3 uid="uid://dg4qrlyyyg8ac"]

[ext_resource type="Script" path="res://Scripts/pause.gd" id="1_1nmcw"]
[ext_resource type="Texture2D" uid="uid://dg4ue78hiq3rs" path="res://Assets/UI/UI_Flat_Frame_01_Horizontal.png" id="1_co6c4"]
[ext_resource type="Shader" path="res://Assets/UI/pause.gdshader" id="1_wt3o7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_84bv2"]
shader = ExtResource("1_wt3o7")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_4ww14"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rck62"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t11l5"]
_data = {
"RESET": SubResource("Animation_rck62"),
"blur": SubResource("Animation_4ww14")
}

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1nmcw")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_84bv2")
layout_mode = 0
offset_right = 1151.0
offset_bottom = 647.0

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 349.0
offset_top = 91.0
offset_right = 792.0
offset_bottom = 499.0

[node name="Resume" type="Button" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 125.0
offset_top = 80.0
offset_right = 317.0
offset_bottom = 144.0
text = "Resume"

[node name="Sprite2D" type="Sprite2D" parent="Panel/Resume"]
position = Vector2(96, 32)
scale = Vector2(2, 2)
texture = ExtResource("1_co6c4")

[node name="Label" type="Label" parent="Panel/Resume"]
layout_mode = 0
offset_right = 193.0
offset_bottom = 64.0
theme_type_variation = &"HeaderLarge"
text = "Resume"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Restart" type="Button" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 125.0
offset_top = 183.0
offset_right = 317.0
offset_bottom = 247.0
text = "Resume"

[node name="Sprite2D" type="Sprite2D" parent="Panel/Restart"]
position = Vector2(96, 32)
scale = Vector2(2, 2)
texture = ExtResource("1_co6c4")

[node name="Label" type="Label" parent="Panel/Restart"]
layout_mode = 0
offset_right = 193.0
offset_bottom = 64.0
theme_type_variation = &"HeaderLarge"
text = "Restart"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Main Menu" type="Button" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 125.0
offset_top = 283.0
offset_right = 317.0
offset_bottom = 347.0
text = "Resume"

[node name="Sprite2D" type="Sprite2D" parent="Panel/Main Menu"]
position = Vector2(96, 32)
scale = Vector2(2, 2)
texture = ExtResource("1_co6c4")

[node name="Label" type="Label" parent="Panel/Main Menu"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 65.0
theme_type_variation = &"HeaderLarge"
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t11l5")
}

[connection signal="pressed" from="Panel/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/Restart" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Panel/Main Menu" to="." method="_on_main_menu_pressed"]
